It works!! TODO delete duplicate code